--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "facerecognetion",
+  "homepage": "https://github.com/saied2035/facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +8,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "clarifai": "^2.9.1",
+    "gh-pages": "^3.2.3",
+    "npm": "^7.20.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-tilt": "^0.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -18,6 +21,8 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
