--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facerecognetion",
-  "homepage": "https://github.com/saied2035/facerecognition",
+  "homepage": "https://saied2035.github.io/facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,12 +19,12 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
