--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^4.0.3",
     "react-tilt": "^0.1.4",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.12.0"
   },
