--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facerecognetion",
-  "homepage": "https://saied2035.github.io/facerecognition",
+  "homepage": "https://saied2035.github.io/smartbrain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
