--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scripts": "^5.0.1",
     "react-tilt": "^0.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "tachyons": "^4.12.0"
   },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  },
   "scripts": {
-    "start": "WATCHPACK_POLLING=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
